--- a/assets/less/utils/utils.less
+++ b/assets/less/utils/utils.less
@@ -28,12 +28,11 @@
 	opacity: @num;
 }
 
-.transition(@prop: all .3s ease-out){
-	-webkit-transition: @prop;
-	-moz-transition: @prop;
-	-ms-transition: @prop;
-	-o-transition: @prop;
-	transition: @prop;
+.transition(@duration:0.2s, @ease:ease-out) {
+  -webkit-transition: all @duration @ease;
+  -moz-transition: all @duration @ease;
+  -o-transition: all @duration @ease;
+  transition: all @duration @ease;
 }
 
 .transform(@prop) {
