--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,22 +1,12 @@
 /*
- * Theme Name: Template name
- * Author: rodrigofpaiva [at] gmail.com
+ * Theme Name: titulo tema
+ * Author: autor do tema
 */
 
 @import "utils/utils";
 @import "utils/reset";
 @import "utils/fonts";
-
-// ==========================================================================
-// vars
-// ==========================================================================
-@black : #000;
-@white : #fff;
-@blue : #3994d1;
-@purple : #662d91;
-
-@helvetica_lt : 'Conv_HelveticaNeueLTStd-Lt';
-@sans : 'Open Sans';
+@import "utils/variaveis";
 
 // ==========================================================================
 // all - main
@@ -35,44 +25,13 @@ body {
 // ==========================================================================
 // header
 // ==========================================================================
-#header {
-	border-bottom: 1px solid #809293;
-
-	h1 {
-		width: 250px;
-		height: 250px;
-		background: url('@{BASE_IMG}/teste-logo.jpg') repeat;
-
-		&:after {
-			display: block;
-			position: absolute;
-			content: '';
-			bottom: -13px;
-			left: 0;
-			width: 102px;
-			height: 3px;
-			background: @blue;
-		}
-	}
-
-	p {
-		a {
-			.font-mixin(@helvetica_lt, 15px, @white);
-			.border-radius(3px);
-			background: @purple;
-			border: red 1px solid;
-		}
-	}
-}
+@import "header";
 
 
 // ==========================================================================
 // footer
 // ==========================================================================
-#footer {
-	border-top: 1px solid #d1d3d4;
-	padding-top: 40px;
-}
+@import "footer";
 
 
 // ==========================================================================
@@ -86,7 +45,7 @@ body {
 
 	a {
 		margin: 35px 0 0 0;
-		.font-mixin(@titillium_sb, 14px, @white);
+		.font-mixin(@helvetica_lt, 14px, @white);
 		width: 124px;
 		height: 43px;
 		text-align: center;
@@ -96,8 +55,8 @@ body {
 		.transition(0.5s, ease-out);
 
 		&:hover {
-			background: @green;
-			border: 1px solid @green;
+			background: @purple;
+			border: 1px solid @purple;
 		}
 	}
 
