atualizando e novas funcionalidades

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -35,8 +35,21 @@ body {
 
 
 // ==========================================================================
+// content - objects
+// ==========================================================================
+	img {width: 100%;}
+
+// ==========================================================================
 // content - pages
 // ==========================================================================
+/* melhorar isso aqui */
+.teste {
+	img {
+		width: 44%;
+  	margin: 0 0 10px 4%;
+	}
+}
+
 #main {
 	padding-bottom: 150px;
 }
@@ -119,4 +132,80 @@ body .none{display:none}
 body .relative{position:relative}
 body .absolute{position:absolute}
 body .sumir{overflow:hidden;text-indent:-999em}
+
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+
+
+
+
+
+/* ==========================================================================
+   Print styles
+   ========================================================================== */
+
+@media print {
+    *,
+    *:before,
+    *:after {
+        background: transparent !important;
+        color: #000 !important;
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+        content: "";
+    }
+
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
+
+    thead {
+        display: table-header-group;
+    }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    img {
+        max-width: 100% !important;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+}
 
