--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -1,4 +1,62 @@
-#footer {
-	border-top: 1px solid #d1d3d4;
-	padding-top: 40px;
+.footer-primary {
+	/* ==============
+    MOBILE: Menu
+   ============== */
+
+	nav ul {
+	    margin: 0;
+	    padding: 0;
+	    list-style-type: none;
+	}
+
+	nav a {
+	    display: block;
+	    margin-bottom: 10px;
+	    padding: 15px 0;
+
+	    text-align: center;
+	    text-decoration: none;
+	    font-weight: bold;
+
+	    color: white;
+	    background: #e44d26;
+	}
+
+	nav a:hover,
+	nav a:visited {
+	    color: white;
+	}
+
+	nav a:hover {
+	    text-decoration: underline;
+	}
+}
+
+
+
+
+@media only screen and (min-width: 480px) {
+
+.footer-primary {
+	/* ====================
+    INTERMEDIATE: Menu
+   ==================== */
+
+    nav a {
+        float: left;
+        width: 27%;
+        margin: 0 1.7%;
+        padding: 25px 2%;
+        margin-bottom: 0;
+    }
+
+    nav li:first-child a {
+        margin-left: 0;
+    }
+
+    nav li:last-child a {
+        margin-right: 0;
+    }
+}
+
 }
