--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -1,5 +1,4 @@
-#header {
-	border-bottom: 1px solid #809293;
+/*#header {
 
 	h1 {
 		width: 250px;
@@ -26,4 +25,155 @@
 			border: red 1px solid;
 		}
 	}
+}*/
+
+.list-auto, .list-auto li { width: 100%; float: left; display: block; position: relative; }
+.list-auto, .list-auto li { width: auto; }
+
+.header-primary {
+  min-height: 60px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  border-bottom: 1px solid #ccc;
+  background: #ECECEC;
+  z-index: 2;
 }
+
+.list-auto {
+  padding: 15px 10px 0 0;
+
+  li {
+	  border-left: 1px solid #ccc;
+
+	  &:first-child {
+		  border: none;
+		}
+
+		a {
+		  display: block;
+		  padding: 0 10px;
+		  color: #999;
+		  font-size: 16px;
+		  line-height: 30px;
+		  text-decoration: none;
+		  -webkit-transition: all 300ms ease;
+		  transition: all 300ms ease;
+
+		  &:hover {
+			  color: #333;
+			}
+		}
+	}
+}
+
+input#control-nav {
+  visibility: hidden;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
+}
+
+
+
+/* ==============
+    MOBILE: Menu
+   ============== */
+	@media screen and (max-width: 767px) {
+	  .nav-primary {
+	    position: fixed;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    width: 250px;
+	    border-left: 1px solid #ccc;
+	    background: #fff;
+	    overflow-x: auto;
+	    z-index: 2;
+	    -webkit-transition: all 500ms ease;
+	    transition: all 500ms ease;
+	    -webkit-transform: translate(100%, 0);
+	    -ms-transform: translate(100%, 0);
+	    transform: translate(100%, 0);
+	  }
+
+	  .list-auto {
+	    padding: 0;
+
+	    li {
+		    width: 100%;
+		    border: solid #ccc;
+		    border-width: 0 0 1px;
+
+		    a {
+			    padding: 15px 10px;
+
+			    &:hover {
+				    background-color: #ccc;
+				  }
+			  }
+		  }
+	  }
+
+	  .control-nav { /* label icon */
+	    position: absolute;
+	    right: 20px;
+	    top: 20px;
+	    display: block;
+	    width: 30px;
+	    padding: 5px 0;
+	    border: solid #333;
+	    border-width: 3px 0;
+	    z-index: 2;
+	    cursor: pointer;
+
+	    &:before {
+		    content: "";
+		    display: block;
+		    height: 3px;
+		    background: #333;
+		  }
+	  }
+
+	  .control-nav-close {
+	    position: fixed; /* label layer */
+	    right: 0;
+	    top: 0;
+	    bottom: 0;
+	    left: 0;
+	    display: block;
+	    z-index: 1;
+	    background: rgba(0,0,0,0.4);
+	    -webkit-transition: all 500ms ease;
+	    transition: all 500ms ease;
+	    -webkit-transform: translate(100%, 0);
+	    -ms-transform: translate(100%, 0);
+	    transform: translate(100%, 0);
+	  }
+
+	  /* checked nav */
+	  input#control-nav {
+	    display: block;
+	  }
+
+	  input#control-nav:focus ~ .control-nav {
+	    border-color: #000;
+	    box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
+	  }
+
+	  input#control-nav:focus ~ .control-nav:before {
+	    background: #000;
+	  }
+
+	  input#control-nav:checked ~ nav,
+	  input#control-nav:checked ~ .control-nav-close {
+	    -webkit-transform: translate(0, 0);
+	    -ms-transform: translate(0, 0);
+	    transform: translate(0, 0);
+	  }
+
+	  header+section {
+	    padding-top: 80px;
+	  }
+	}
