--- a/assets/less/utils/variaveis.less
+++ b/assets/less/utils/variaveis.less
@@ -1,10 +1,12 @@
 // ==========================================================================
 // vars
 // ==========================================================================
-	@black : #000;
-	@white : #fff;
-	@blue : #3994d1;
-	@purple : #662d91;
+	/* cores */
+		@black  : #000;
+		@white  : #fff;
+		@blue   : #3994d1;
+		@purple : #662d91;
 
-	@helvetica_lt : 'Conv_HelveticaNeueLTStd-Lt';
-	@sans : 'Open Sans';
+	/* fontes */
+		@arial 		: 'Arial';
+		@verdana 	: 'Verdana';
