--- a/assets/less/elements/header.less
+++ b/assets/less/elements/header.less
@@ -1,38 +1,11 @@
-/*#header {
-
-	h1 {
-		width: 250px;
-		height: 250px;
-		background: url('@{BASE_IMG}/teste-logo.jpg') repeat;
-
-		&:after {
-			display: block;
-			position: absolute;
-			content: '';
-			bottom: -13px;
-			left: 0;
-			width: 102px;
-			height: 3px;
-			background: @blue;
-		}
-	}
-
-	p {
-		a {
-			.font-mixin(@helvetica_lt, 15px, @white);
-			.border-radius(3px);
-			background: @purple;
-			border: red 1px solid;
-		}
-	}
-}*/
 
 .list-auto, .list-auto li { width: 100%; float: left; display: block; position: relative; }
 .list-auto, .list-auto li { width: auto; }
 
 .header-primary {
   min-height: 60px;
-  position: fixed;
+  /*position: fixed;*/
+  position: relative;
   top: 0;
   right: 0;
   left: 0;
