--- a/assets/less/utils/components.less
+++ b/assets/less/utils/components.less
@@ -18,31 +18,157 @@
     }
 
     .btn-success {
-      background-color: #43AC6A;
-      border-color: #368a55;
-      color: #FFFFFF;
+      background-color: #dff0d8;
+      border-color: #43AC6A;
+      color: #000;
 
       &:hover {
-        background-color: #368a55;
+        background-color: #43AC6A;
+        color: #FFF;
       }
     }
 
-    .btn-alert {
-      background-color: #f04124;
+    .btn-warning {
+      background-color: #fcf8e3;
+      border-color: #fcf38a;
+      color: #333;
+
+      &:hover {
+        background-color: #fcf38a;
+      }
+    }
+
+    .btn-error {
+      background-color: #f2dede;
       border-color: #cf2a0e;
-      color: #FFFFFF;
+      color: #000;
 
       &:hover {
         background-color: #cf2a0e;
+        color: #fff;
+      }
+    }
+
+    .btn-info {
+      background-color: #d9edf7;
+      border-color: #0088cc;
+      color: #000;
+
+      &:hover {
+        background-color: #0088cc;
+        color: #fff;
+      }
+    }
+
+    .btn-round {
+      .border-radius(1000px);
+    }
+
+    .btn-radius {
+      .border-radius(3px);
+    }
+
+
+
+  /* breadcrumbs */
+    .breadcrumb {
+      padding: 8px 15px;
+      margin: 0 0 20px;
+      list-style: none;
+      background-color: #f5f5f5;
+
+      > li {
+        display: inline-block;
+        *display: inline;
+        text-shadow: 0 1px 0 #ffffff;
+        *zoom: 1;
+
+        > .divider {
+          padding: 0 5px;
+          color: #ccc;
+        }
+
+        &.active {
+          color: #999999;
+        }
       }
     }
 
 
 
+  /* pagination */
+    .pagination {
+      margin: 20px 0;
+    }
 
-/*
-http://tableless.com.br/criando-seu-framework-html-css/
-http://getbootstrap.com/2.3.2/components.html
-http://foundation.zurb.com/docs/components/buttons.html
+    .pagination ul {
+      display: inline-block;
+      *display: inline;
+      margin-bottom: 0;
+      margin-left: 0;
+      -webkit-border-radius: 4px;
+         -moz-border-radius: 4px;
+              border-radius: 4px;
+      *zoom: 1;
+      -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+         -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+              box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    }
 
-*/
+    .pagination ul > li {
+      display: inline;
+    }
+
+    .pagination ul > li > a,
+    .pagination ul > li > span {
+      float: left;
+      padding: 4px 12px;
+      line-height: 20px;
+      text-decoration: none;
+      background-color: #ffffff;
+      border: 1px solid #dddddd;
+      border-left-width: 0;
+    }
+
+    .pagination ul > li > a:hover,
+    .pagination ul > li > a:focus,
+    .pagination ul > .active > a,
+    .pagination ul > .active > span {
+      background-color: #f5f5f5;
+    }
+
+    .pagination ul > .active > a,
+    .pagination ul > .active > span {
+      color: #999999;
+      cursor: default;
+    }
+
+    .pagination ul > .disabled > span,
+    .pagination ul > .disabled > a,
+    .pagination ul > .disabled > a:hover,
+    .pagination ul > .disabled > a:focus {
+      color: #999999;
+      cursor: default;
+      background-color: transparent;
+    }
+
+    .pagination ul > li:first-child > a,
+    .pagination ul > li:first-child > span {
+      border-left-width: 1px;
+      -webkit-border-bottom-left-radius: 4px;
+              border-bottom-left-radius: 4px;
+      -webkit-border-top-left-radius: 4px;
+              border-top-left-radius: 4px;
+      -moz-border-radius-bottomleft: 4px;
+      -moz-border-radius-topleft: 4px;
+    }
+
+    .pagination ul > li:last-child > a,
+    .pagination ul > li:last-child > span {
+      -webkit-border-top-right-radius: 4px;
+              border-top-right-radius: 4px;
+      -webkit-border-bottom-right-radius: 4px;
+              border-bottom-right-radius: 4px;
+      -moz-border-radius-topright: 4px;
+      -moz-border-radius-bottomright: 4px;
+    }
